src/objects/Payment_Arrangement__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Arrangement_Type__c</fullName>
        <label>Arrangement Type</label>
        <picklist>
            <picklistValues>
                <fullName>One-Time</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billed_Date__c</fullName>
        <label>Billed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Encounter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Encounter</label>
        <referenceTo>Encounter__c</referenceTo>
        <relationshipLabel>Payment Arrangements</relationshipLabel>
        <relationshipName>Payment_Arrangements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Installment_Amount__c</fullName>
        <label>Installment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Amount__c</fullName>
        <label>Max Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Installments__c</fullName>
        <label>Number of Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Installment_Count__c</fullName>
        <label>Number of Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Method</label>
        <referenceTo>Payment_Method__c</referenceTo>
        <relationshipLabel>Payment Arrangements</relationshipLabel>
        <relationshipName>Payment_Arrangements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Payment Arrangement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Arrangement_Type__c</columns>
        <columns>NAME</columns>
        <columns>Max_Amount__c</columns>
        <columns>Date__c</columns>
        <columns>Installment_Amount__c</columns>
        <columns>Original_Installment_Count__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>One_Time</fullName>
        <columns>NAME</columns>
        <columns>Arrangement_Type__c</columns>
        <columns>Max_Amount__c</columns>
        <columns>Date__c</columns>
        <columns>Payment_Method__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Arrangement_Type__c</field>
            <operation>equals</operation>
            <value>One-Time</value>
        </filters>
        <label>One-Time</label>
    </listViews>
    <listViews>
        <fullName>Recurring</fullName>
        <columns>NAME</columns>
        <columns>Arrangement_Type__c</columns>
        <columns>Billed_Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Original_Installment_Count__c</columns>
        <columns>Installment_Amount__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Arrangement_Type__c</field>
            <operation>equals</operation>
            <value>Recurring</value>
        </filters>
        <label>Recurring</label>
    </listViews>
    <nameField>
        <displayFormat>pa-{YYYY}{MM}-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Arrangements</pluralLabel>
    <recordTypes>
        <fullName>Deposit</fullName>
        <active>true</active>
        <label>Deposit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Payment_Plan</fullName>
        <active>true</active>
        <label>Payment Plan</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>